Fix letter spacing on byline

--- a/src/styles/defaults/_article.scss
+++ b/src/styles/defaults/_article.scss
@@ -136,7 +136,7 @@ body {
   text-align: center;
   text-transform: uppercase;
   font-size: 13px;
-  letter-spacing: 0.57px;
+  letter-spacing: 1.794px;
   margin: 8px 0;
 
   a,
